name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.8 && < 5
                  , hakyll == 4.15.*
                  , filepath == 1.4.*
                  , text-icu >= 0.7.0.1 && < 1
                  , text 
                  , process == 1.6.*
  ghc-options:      -threaded
  default-language: Haskell2010
